--- a/views/product.ejs
+++ b/views/product.ejs
@@ -80,7 +80,6 @@
                     </p>
                   </div>
                 </div>
-
                 <% if(data.con[t].product === data.con[6].product) { %>
                 <div class="middle_Con">
                   <h5 class="vg-h5">菜單特色:</h5>
@@ -143,6 +142,9 @@
                       <p class="p-0 m-0 vg-p dis">
                         單箱金額: <span class="toal price4">0</span>元
                       </p>
+                      <div class="vg-p fm">
+                        家庭箱金額:<span class="price6">0</span>元
+                      </div>
                       <div class="day">
                         <p class="p-0 m-0 vg-p">
                           總金額: <span class="price5">0</span>元
@@ -381,7 +383,7 @@
                   <h5 class="vg-h5">活動時間</h5>
                   <h6>
                     <a
-                      class="vg-p"
+                      class="vg-p aa"
                       href="http://127.0.0.1:2407/activityboard/inside/2"
                       >點我看詳細活動</a
                     >
