--- a/views/product.ejs
+++ b/views/product.ejs
@@ -135,8 +135,8 @@
                           家庭箱(3~4人)
                         </option>
                         <option value="30d" data-size="s">雙人箱(30day)</option>
-                        <option value="60d" data-size="l">雙人箱(60day)</option>
-                        <option value="30d" data-size="s">家庭箱(30day)</option>
+                        <option value="60d" data-size="s">雙人箱(60day)</option>
+                        <option value="30d" data-size="l">家庭箱(30day)</option>
                         <option value="60d" data-size="l">家庭箱(60day)</option>
                       </select>
                       <p class="p-0 m-0 vg-p dis">
@@ -290,8 +290,8 @@
                     <option value="once" data-size="s">雙人箱(1~2人)</option>
                     <option value="once" data-size="l">家庭箱(3~4人)</option>
                     <option value="30d" data-size="s">雙人箱(30day)</option>
-                    <option value="60d" data-size="l">雙人箱(60day)</option>
-                    <option value="30d" data-size="s">家庭箱(30day)</option>
+                    <option value="60d" data-size="s">雙人箱(60day)</option>
+                    <option value="30d" data-size="l">家庭箱(30day)</option>
                     <option value="60d" data-size="l">家庭箱(60day)</option>
                   </select>
                   <br />
