--- a/views/orderplaced.ejs
+++ b/views/orderplaced.ejs
@@ -39,7 +39,7 @@
                 <div class="modal fade" id="orderModal" tabindex="-1" role="dialog" aria-labelledby="orderModalLabel"
                     aria-hidden="true">
                     <div class="modal-dialog" role="document">
-                        <div class="modal-content" style="width: 130%;">
+                        <div class="modal-content" style="width: 120%;">
                             <div class="modal-header">
                                 <h5 class="modal-title" id="orderModalLabel">Vege</h5>
                             </div>
@@ -153,7 +153,7 @@
                                     </table>
                                 </div>
                             </div>
-                            <div class="modal-footer">
+                            <div class="modal-footer mx-auto">
                                 <button type="button" class="btn btn-warning" data-dismiss="modal"
                                     id="rateOrder">評價訂單</button>
                                 <button type="button" class="btn btn-success" id="ordermodalok">確定</button>
