HH 修正查看訂單樣式

--- a/views/orderplaced.ejs
+++ b/views/orderplaced.ejs
@@ -401,7 +401,7 @@
                                     <td>${item.price}</td>
                                 </tr>
                                 <tr class="trHtml border-bottom" style="color: #0d5946;">
-                                    <td colspan="6" class="vg-ps my-2 text-end"><i class="fa-solid fa-gift"></i>預計配送日期：<span>${shippingDateArr}</span></td>
+                                    <td colspan="6" class="vg-ps my-2 text-end py-2"><i class="fa-solid fa-truck mx-1"></i>預計配送日期：<span>${shippingDateArr}</span></td>
                                 </tr>
                             `;
                                 $('#myOitem').after(trHtml);
