--- a/views/m_basicInfo.ejs
+++ b/views/m_basicInfo.ejs
@@ -24,7 +24,7 @@
 
           <!-- content -->
           <div class="memb-content">
-            <h4 class="vg-h4">會員基本資料</h4>
+            <h4>會員基本資料</h4>
 
             <form action="" class="memb-basicInfo needs-validation row" novalidate>
               <div class="col-12">
