--- a/views/member_index.ejs
+++ b/views/member_index.ejs
@@ -24,7 +24,7 @@
 
         <!-- content -->
         <div class="memb-content">
-            <h4 class="vg-h4">Welcome</h4>
+            <h4 class="welcome">Welcome</h4>
             
             <div class="memb-order row">
               <ul class="list-group">
