--- a/views/share/m_HSidebar.ejs
+++ b/views/share/m_HSidebar.ejs
@@ -54,66 +54,66 @@
                     </div>
                     <div class="collapse" id="account-collapse" data-bs-parent="#sidB">
                         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                            <li><a href="" class="d-inline-flex text-decoration-none" id="myuserInfo">基本資料</a>
+                            <li><a href="" id="basicInfo" class="d-inline-flex text-decoration-none" >基本資料</a>
                             </li>
-                            <li><a href="/member/myCards" class="d-inline-flex text-decoration-none">信用卡</a></li>
-                            <li><a href="/member/address" class="d-inline-flex text-decoration-none">常用地址</a></li>
-                            <li><a href="#" class="d-inline-flex text-decoration-none">更改密碼</a></li>
+                            <li><a href="" id="mycards" class="d-inline-flex text-decoration-none">信用卡</a></li>
+                            <li><a href="" id="address" class="d-inline-flex text-decoration-none">常用地址</a></li>
+                            <!-- <li><a href="#" class="d-inline-flex text-decoration-none">更改密碼</a></li> -->
                         </ul>
                     </div>
                 </li>
 
                 <li class="mb-3">
-                    <button href="#" class="btn d-flex align-items-center collapsed fw-semibold"
+                    <button id="morder" class="btn d-flex align-items-center collapsed fw-semibold"
                         data-bs-toggle="collapse" data-bs-target="#subscribe-collapse" aria-expanded="false"
                         aria-controls="subscribe-collapse">
                         訂單總覽
                     </button>
                     <div class="collapse" id="subscribe-collapse" data-bs-parent="#sidB">
-                        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                        <!-- <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                             <li><a href="/member/order" class="d-inline-flex text-decoration-none">訂單紀錄</a></li>
-                            <!-- <li><a href="#" class="d-inline-flex text-decoration-none">訂閱制</a></li> -->
-                            <!-- <li><a href="#" class="d-inline-flex text-decoration-none">單次訂單</a></li> -->
-                            <!-- <li><a href="#" class="d-inline-flex text-decoration-none">歷史訂單紀錄</a></li> -->
-                        </ul>
+                            <li><a href="#" class="d-inline-flex text-decoration-none">訂閱制</a></li>
+                            <li><a href="#" class="d-inline-flex text-decoration-none">單次訂單</a></li>
+                            <li><a href="#" class="d-inline-flex text-decoration-none">歷史訂單紀錄</a></li>
+                        </ul> -->
                     </div>
                 </li>
 
                 <!-- <li class="mb-3">
-            <button href="#" class="btn d-flex align-items-center collapsed fw-semibold"
-              data-bs-toggle="collapse" data-bs-target='#coupon-collapse' 
-              aria-expanded="false" aria-controls="coupon-collapse">
-              我的優惠卷
-            </button>
-            <div class="collapse" id="coupon-collapse" data-bs-parent="#sidB">
-            </div>
-          </li> -->
+                    <button href="#" class="btn d-flex align-items-center collapsed fw-semibold"
+                    data-bs-toggle="collapse" data-bs-target='#coupon-collapse' 
+                    aria-expanded="false" aria-controls="coupon-collapse">
+                    我的優惠卷
+                    </button>
+                    <div class="collapse" id="coupon-collapse" data-bs-parent="#sidB">
+                    </div>
+                </li> -->
 
                 <li class="mb-3">
-                    <button href="#" class="btn d-flex align-items-center collapsed fw-semibold"
+                    <button id="coins" class="btn d-flex align-items-center collapsed fw-semibold"
                         data-bs-toggle="collapse" data-bs-target='#coins-collapse' aria-expanded="false"
                         aria-controls="coins-collapse">
-                        我的綠苗點
+                        我的VG點
                     </button>
                     <div class="collapse" id="coins-collapse" data-bs-parent="#sidB">
-                        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                        <!-- <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                             <li><a href="/member/bonus" class="d-inline-flex text-decoration-none">累點紀錄</a></li>
-                            <!-- <li><a href="#" class="d-inline-flex text-decoration-none">使用紀錄</a></li> -->
-                        </ul>
+                            <li><a href="#" class="d-inline-flex text-decoration-none">使用紀錄</a></li>
+                        </ul> -->
                     </div>
                 </li>
 
                 <li class="mb-3">
-                    <button href="#" class="btn d-flex align-items-center collapsed fw-semibold"
+                    <button id="mark" class="btn d-flex align-items-center collapsed fw-semibold"
                         data-bs-toggle="collapse" data-bs-target="#mark-collapse" aria-expanded="false"
                         aria-controls="mark-collapse">
                         個人收藏
                     </button>
                     <div class="collapse" id="mark-collapse" data-bs-parent="#sidB">
-                        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                        <!-- <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                             <li><a href="/member/article" class="d-inline-flex text-decoration-none">收藏的文章</a></li>
-                            <!-- <li><a href="#" class="d-inline-flex text-decoration-none">收藏的文章</a></li> -->
-                        </ul>
+                            <li><a href="#" class="d-inline-flex text-decoration-none">收藏的文章</a></li>
+                        </ul> -->
                     </div>
                 </li>
             </ul>
