--- a/lib/css/memb.css
+++ b/lib/css/memb.css
@@ -289,6 +289,7 @@ body {
 .memb-content h4 {
     padding-left: 12px;
     margin-bottom: 40px;
+    font-size: calc(1.275rem + .3vw);
 }
 
 .memb-content h4:before {
